<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>DiscordBot</artifactId>
        <groupId>eu.nicokempe</groupId>
        <version>2022.7.1-dev</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>parent-bot</artifactId>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>eu.nicokempe</groupId>
            <artifactId>parent-api</artifactId>
            <version>2022.7.1-dev</version>
        </dependency>
    </dependencies>

</project>